NetBSD Problem Report #42041

From www@NetBSD.org  Thu Sep 10 17:06:44 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 818B663BC1D
	for <gnats-bugs@gnats.netbsd.org>; Thu, 10 Sep 2009 17:06:44 +0000 (UTC)
Message-Id: <20090910170644.4815663B877@www.NetBSD.org>
Date: Thu, 10 Sep 2009 17:06:44 +0000 (UTC)
From: jasper@pointless.net
Reply-To: jasper@pointless.net
To: gnats-bugs@NetBSD.org
Subject: kernel assert ("(boundary & (boundary - 1)) == 0") triggers with i915drm in recent -5 kernel
X-Send-Pr-Version: www-1.0

>Number:         42041
>Category:       port-i386
>Synopsis:       kernel assert ("(boundary & (boundary - 1)) == 0") triggers with i915drm in recent -5 kernel
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Sep 10 17:10:00 +0000 2009
>Closed-Date:    Tue Jun 01 02:37:55 +0000 2010
>Last-Modified:  Tue Jun 01 02:37:55 +0000 2010
>Originator:     Jasper Wallace
>Release:        5.0-STABLE
>Organization:
>Environment:
NetBSD lemonade 5.0_STABLE NetBSD 5.0_STABLE (LEMONADE) #1: Mon May 25 16:27:45 BST 2009  jasper@meep-meep:/usr/obj/sys/arch/i386/compile/LEMONADE i386
>Description:
kernels built form an up-to-date netbsd-5 source tree panic with (hand copied) when booted:

i915drm0 at vga0: Intel i915GM
panic: kernel diagnostic assertion "(boundary & (boundary - 1)) == 0" failed: file "/usr/src/sys/uvm/uvm_pglist.c", line 403
db{0}> bt
breakpoint(
panic(
__kernassert(
uvm_pglistalloc(
_bus_dmamem_alloc_range(
_bus_dmamem_alloc(
drm_pci_alloc(cad9d9a4, 1000, 1000, ffffffff, 88, c15b3008, c15b3000, 2, cad9d9d0,0) at netbsd:drm_pci_alloc+0xcc
i915_driver_load([blah]) at netbsd:i915_driver_load + 0x1fe
[stuff]

P.S. 'sync' form the ddb prompt dosn't produce a core dump, do i somehow need to tell the kernel to dump on wd0b (It might not of probed the hard drive at this point in the boot sequence).

P.P.S. I'm cleaning out my source tree and rebuilding tools and kernel, will try a GENERIC kernel as well
>How-To-Repeat:
build a recent -5 kernel and boot it on a Samsung q30 plus

>Fix:

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42041 CVS commit: src/sys/external/bsd/drm/dist/shared-core
Date: Thu, 10 Sep 2009 14:11:21 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Sep 10 18:11:21 UTC 2009

 Modified Files:
 	src/sys/external/bsd/drm/dist/shared-core: i915_dma.c mach64_dma.c

 Log Message:
 PR/42041: Jasper Wallace: Stopgap fix for kernel assert
 ("(boundary & (boundary - 1)) == 0") triggers with i915drm in recent -5 kernel

 Read the comment in the code for a detailed explanation. This should be fixed
 properly in the i386 bus code, but it is too intrusive to do for -5.
 XXX: pullup for 5.x


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.4 -r1.2 \
     src/sys/external/bsd/drm/dist/shared-core/i915_dma.c
 cvs rdiff -u -r1.2 -r1.3 \
     src/sys/external/bsd/drm/dist/shared-core/mach64_dma.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 01 Jun 2010 02:37:55 +0000
State-Changed-Why:
this bug was fixed by drochner@ and pulled up to netbsd-5 branch in march.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.